@@ -1,3 +1,8 @@
+2006-03-31  Egbert Eich  <eich_at_freedesktop_dot_org>
+
+	* mi/miwideline.c: (miFillRectPolyHelper), (miLineArc):
+	fixed typo.
+	
 2006-03-31  Daniel Stone  <daniel@freedesktop.org>
 
 	* configure.ac:
